--- a/day08/post-fixed.html
+++ b/day08/post-fixed.html
@@ -11,7 +11,7 @@
             width: 200px;
             height: 300px;
             background: url(./images/tree.png) no-repeat;
-            background-size: cover;
+            background-size: cover; /* 이미지 축소 꽉 차게 보임 */
             position: fixed;
             top: 20px;
             right: 20px;
