--- a/responsive_web/mediaquery1.html
+++ b/responsive_web/mediaquery1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미디어 쿼리 예제</title>
     <style>
+        /* pc기준 */
         @media screen and (min-width: 1024px) {
             body{
                 background: url("images/bg0.jpg") no-repeat;
@@ -18,12 +19,14 @@
                 background-size: cover;
             }
         }
+        /* 태블릿 기준 */
         @media screen and (max-width: 768px){
             body{
                 background: url("images/bg2.jpg") no-repeat;
                 background-size: cover;
             }
         }
+        /* 모바일 기준 */
         @media screen and (max-width: 320px) {
             body{
                 background: url("images/bg3.jpg") no-repeat;
