--- a/responsive_web/justity-content.html
+++ b/responsive_web/justity-content.html
@@ -11,11 +11,11 @@
             border: 1px solid #000;
             background-color: #eee;
             display: flex; 
-            /* justify-content: flex-start;  /*주축의 시작점에 맞춤*/
+            justify-content: flex-start;  /*주축의 시작점에 맞춤*/
             /*justify-content: flex-end;     /*주축의 끝점에 맞춤 */
             /*justify-content: center;       /*주축의 가운데에 맞춤 */
             /*justify-content: space-between; /*시작점과 끝점에 동일한 간격으로 배치*/
-            justify-content: space-around;    /*주축에 동일한 간격*/
+            /*justify-content: space-around;    /*주축에 동일한 간격*/
         }
         .box{
             width: 80px;
