--- a/responsive_web/flex2.html
+++ b/responsive_web/flex2.html
@@ -11,9 +11,9 @@
             border: 1px solid #000;
             background-color: #eee;
             display: flex; 
-            /*flex-direction: row;         /*주축-왼쪽에서 오른쪽*/
+            flex-direction: row;         /*주축-왼쪽에서 오른쪽*/
             /*flex-direction: row-reverse;  /*주축-오른쪽 왼쪽으로, 순서-오른쪽에서 왼쪽*/
-              flex-direction: column;       /*주축-위에서 아래로 */
+            /* flex-direction: column;       /*주축-위에서 아래로 */
             /*flex-direction: column-reverse;  /*주축-아래에서 위로*/
         }
         .box{
