--- a/responsive_web/flex3.html
+++ b/responsive_web/flex3.html
@@ -11,8 +11,8 @@
             border: 1px solid #000;
             background-color: #eee;
             display: flex; 
-            /*flex-wrap: nowrap;     /*기본-nowrap : 줄을 바꾸지 않음*/
-             flex-wrap: wrap;       /*교차축(세로) : 줄을 바꿔 아래로 배치됨*/
+            flex-wrap: nowrap;     /*기본-nowrap : 줄을 바꾸지 않음*/
+            /* flex-wrap: wrap;       /*교차축(세로) : 줄을 바꿔 아래로 배치됨*/
             /*flex-wrap: wrap-reverse; /*교차축(세로) : 줄을 바꿔 아래로 배치됨 - 순서가 역순*/ 
         }
         .box{
